DBus: TrackList not refreshing problem
Hi,
I've found a problem while trying to control VLC via dbus. My original idea was to append a new track at the end of the TrackList. Order of actions was to retrieve current TrackList first, get the last track from it and add new track after the last one. After doing so, new track appeared in the gui, but the TrackList retrieved from dbus remained unchanged. Also, clearing the list in the gui sometimes didn't clear the dbus TrackList and adding another track via dbus caused segmentation fault.