dbus: fix racy track addition (refs #17451)

This fixes potential assertion failures. Insertion position must always
be valid.